[package]
name = "drand-client-rs"
description = "A small rust library for retrieving random numbers from drand"
version = "0.1.0"
edition = "2021"

[dependencies]
bls12_381 = { version = "0.8.0", features = ["experimental"] }
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.9" # this can't be upgraded for compat with bls12_381 it seems :<
thiserror = "1.0.38"