[package]
name = "drand-client-rs"
description = "A small rust library for retrieving random numbers from drand"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.9" # this can't be upgraded for compat with bls12_381 it seems :<
thiserror = "1.0.38"
energon = { git = "https://github.com/version513/energon.git", rev = "97f4013", default-features = false }

[features]
# Blasters backend https://github.com/filecoin-project/blstrs
blstrs = ["energon/bls12381_blstrs"]
# Arkworks backend https://github.com/arkworks-rs
arkworks = ["energon/bls12381_arkworks"]
