[package]
name = "drand-client-rs"
description = "A small rust library for retrieving random numbers from drand"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
thiserror = "1.0.38"
energon = { git = "https://github.com/version513/energon.git", rev = "dfe26a3", default-features = false }

[features]
# blstrs + arkworks
blstrs = ["energon/bls12381_blstrs", "energon/bn254_arkworks"]
# only arkworks
arkworks = ["energon/bls12381_arkworks", "energon/bn254_arkworks"]
